--- a/.github/workflows/r30.yml
+++ b/.github/workflows/r30.yml
@@ -1,10 +1,13 @@
 name: "30 Timeframe"
 
-
 on:
   schedule:
     - cron: '0 3 * * *'
-
+  push:
+    branches:
+      - master
+      - main
+      
 jobs:
   update-data:
     runs-on: ubuntu-latest
